--- a/app/styles/schedules/schedules.styl
+++ b/app/styles/schedules/schedules.styl
@@ -121,7 +121,7 @@
         &:active, &:hover, &.active
           cursor: pointer
         &.current
-          border: 1px solid #ff4b00
+          border: 1px solid $brand-warning
 
         // Atom class positioning
         .lesson-atom-cell
