retina optemized images

--- a/app/styles/icons/logo.styl
+++ b/app/styles/icons/logo.styl
@@ -1,6 +1,7 @@
 .stico-logo
+  background-size 35px 35px
   display inline-block
-  background-image url(../images/logo.png)
-  width 38px
+  background-image url("../images/logo.png")
+  width 35px
   height 35px
   vertical-align middle
