--- a/app/styles/schedules/schedules.styl
+++ b/app/styles/schedules/schedules.styl
@@ -28,11 +28,6 @@
         background $brand-info
         padding 4px
         color #fff
-        .the-icon
-          display inline-block
-          background-image url(../images/groups-list.png)
-          width 24px
-          height 24px
       .group-name
         margin-left 10px
       &:hover
@@ -123,12 +118,28 @@
         &.current
           border: 1px solid $brand-warning
 
+        // Arrow when details showed
+        .arrow
+          left 50%
+          position absolute
+          z-index 10000
+          bottom 0px
+          width 0
+          height 0
+          border-left 10px solid transparent
+          border-right 10px solid transparent
+          border-bottom 5px solid #eee
+          margin-left -11px
+
         // Atom class positioning
         .lesson-atom-cell
           position absolute
           border-left 1px solid lighten($brand-info, 82%)
           border-right 1px solid lighten($brand-info, 82%)
           padding 0 10px
+
+          &:hover
+            background lighten($brand-info-bg, 80%)
 
           .lesson-name
             font-weight 300
@@ -150,7 +161,7 @@
           border-bottom 1px solid lighten($brand-info, 82%)
         .lesson-parity-2
           line-height 32px
-          font-size 1$font-size-base
+          font-size $font-size-base
           top 31px
           bottom 0
           border-top 1px solid lighten($brand-info, 82%)
