--- a/app/styles/groups/index.styl
+++ b/app/styles/groups/index.styl
@@ -52,7 +52,7 @@
             padding 20px 0 20px
             margin 0
             background darken($brand-info-bg, 7%)
-            border-top 1px solid darken($brand-info-bg, 14%)
+            border-top 1px solid #fff
           .course-content
             padding 0
             .line
