hide border when details showed

--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -15,8 +15,8 @@
 //@import "/bower_components/bootstrap-stylus/stylus/code"
 @import "/bower_components/bootstrap-stylus/stylus/grid"
 //@import "/bower_components/bootstrap-stylus/stylus/tables"
-//@import "/bower_components/bootstrap-stylus/stylus/forms"
-//@import "/bower_components/bootstrap-stylus/stylus/buttons"
+@import "/bower_components/bootstrap-stylus/stylus/forms"
+@import "/bower_components/bootstrap-stylus/stylus/buttons"
 
 // Bootstrap Components
 //@import "/bower_components/bootstrap-stylus/stylus/component-animations"
