--- a/app/styles/icons/arrow-up.styl
+++ b/app/styles/icons/arrow-up.styl
@@ -1,3 +1,5 @@
+@import "/bower_components/bootstrap-stylus/stylus/mixins"
+
 .arrow-up
   display: inline-block;
   background-image: url("../images/arrow-up.png");
@@ -20,21 +22,21 @@
 @keyframes arrowUpIn {
   from {
     opacity 0
-    -webkit-transform translateY(-100%)
+    translate(0, -100%)
   }
   to {
     opacity 1
-    -webkit-transform translateY(0)
+    translate(0, 0)
   }
 }
 
 @keyframes arrowUpOut {
   from {
     opacity 1
-    -webkit-transform translateY(0)
+    translate(0, 0)
   }
   to {
     opacity 0
-    -webkit-transform translateY(-100%)
+    translate(0, -100%)
   }
 }
