--- a/app/styles/schedules/schedules.styl
+++ b/app/styles/schedules/schedules.styl
@@ -3,6 +3,7 @@
 
 // Navigation
 .schedule-header
+  user-select(none)
   .navbar
     background: #fff
     border none
@@ -132,6 +133,7 @@
           border-left 1px solid lighten($brand-info, 82%)
           border-right 1px solid lighten($brand-info, 82%)
           padding 0 10px
+          overflow hidden
 
           &:hover
             background lighten($brand-info-bg, 80%)
