fixed cell width

--- a/app/styles/schedules/schedules.styl
+++ b/app/styles/schedules/schedules.styl
@@ -25,7 +25,7 @@
       .back-logo-square
         float left
         margin-top -1px
-        height 34px
+        height 36px
         background $brand-info
         padding 4px
         color #fff
@@ -170,23 +170,24 @@
           background #fff
           left - 2px
         .lesson-half-2
+          background #fff
           right - 2px
 
       @media (min-width: 768px)
         .lesson-cell
-          width 210px
+          width 211px
           .lesson-half-1
-            right 104px
+            right 105px
           .lesson-half-2
             left 105px
 
       @media (min-width: 992px)
         .lesson-cell
-          width 280px
+          width 281px
           .lesson-half-1
-            right 138px
+            right 140px
           .lesson-half-2
-            left 139px
+            left 140px
 
     // Rounded dow corners
     > :first-child + div.lessons-row
