--- a/app/styles/icons/arrow-up.styl
+++ b/app/styles/icons/arrow-up.styl
@@ -7,17 +7,23 @@
   width: 25px;
   height: 7px;
 
-.arrow-up.ng-enter
-  -webkit-animation: 0.4s arrowUpIn cubic-bezier(0.23, 1, 0.32, 1)
-  -moz-animation: 0.4s arrowUpIn cubic-bezier(0.23, 1, 0.32, 1)
-  -o-animation: 0.4s arrowUpIn cubic-bezier(0.23, 1, 0.32, 1)
-  animation: 0.4s arrowUpIn cubic-bezier(0.23, 1, 0.32, 1)
+  &.ng-animate
+    &.ng-enter
+      opacity 0
+    &.ng-leave
+      opacity 1
 
-.arrow-up.ng-leave
-  -webkit-animation: 0.8s arrowUpOut cubic-bezier(0.23, 1, 0.32, 1)
-  -moz-animation: 0.8s arrowUpOut cubic-bezier(0.23, 1, 0.32, 1)
-  -o-animation: 0.8s arrowUpOut cubic-bezier(0.23, 1, 0.32, 1)
-  animation: 0.8s arrowUpOut cubic-bezier(0.23, 1, 0.32, 1)
+  &.ng-enter
+    -webkit-animation: 0.4s arrowUpIn cubic-bezier(0.23, 1, 0.32, 1)
+    -moz-animation: 0.4s arrowUpIn cubic-bezier(0.23, 1, 0.32, 1)
+    -o-animation: 0.4s arrowUpIn cubic-bezier(0.23, 1, 0.32, 1)
+    animation: 0.4s arrowUpIn cubic-bezier(0.23, 1, 0.32, 1)
+
+  &.ng-leave
+    -webkit-animation: 0.8s arrowUpOut cubic-bezier(0.23, 1, 0.32, 1)
+    -moz-animation: 0.8s arrowUpOut cubic-bezier(0.23, 1, 0.32, 1)
+    -o-animation: 0.8s arrowUpOut cubic-bezier(0.23, 1, 0.32, 1)
+    animation: 0.8s arrowUpOut cubic-bezier(0.23, 1, 0.32, 1)
 
 @keyframes arrowUpIn {
   from {
