--- a/app/styles/schedules/schedules.styl
+++ b/app/styles/schedules/schedules.styl
@@ -18,7 +18,8 @@
 
     // Back to groups list button
     .back-btn
-      padding 4px 15px 4px 0
+      cursor pointer
+      padding 0 15px 0 0
       font-size $font-size-large
       font-weight 400
       white-space nowrap
