--- a/app/styles/_variables.styl
+++ b/app/styles/_variables.styl
@@ -267,7 +267,7 @@ $navbar-default-link-disabled-color ?=       #ccc;
 $navbar-default-link-disabled-bg ?=          transparent;
 
 // Navbar brand label
-$navbar-default-brand-color ?=               lighten($brand-primary, 20%);
+$navbar-default-brand-color ?=               $brand-primary;
 $navbar-default-brand-hover-color ?=         $brand-primary;
 $navbar-default-brand-hover-bg ?=            transparent;
 
