--- a/app/partials/schedules/studies.jade
+++ b/app/partials/schedules/studies.jade
@@ -1,26 +1,28 @@
 div(ng-controller='SchedulesStudiesCtrl')
-    // Schedule navigation
-    .schedule-header
-        .navbar.navbar-default
-            .container.row-fluid(bindonce)
-                .col-sm-4
-                    div.back-btn(ng-click="showGroups()")
-                        div.back-logo-square
-                            i.the-icon
-                        span.group-name(bo-html="$routeParams.groupName")
-                .col-sm-4.text-center
-                    span.schedule-updated-text
-                        span(ng-if="last_update", bo-html="'Обновлено ' + '{{ last_update | relativeDate}}'")
-                        span(ng-if="!last_update") Проверка обновлений...
-                .col-sm-4.text-right
-                    a.next-week-btn
-                        span(bo-html="'schedules.index.next_week' | translate")
-                        i.fa.fa-angle-right
-
     div(ng-if="sched")
         #schedule-greed(breakpoint="min-width: 768px", class="week-{{currentParity}}", ng-init="classes=['1','2','3','4','5','6']")
             // Three columns
             div(ng-if="matches", ng-init="lines=[['Mon', 'Tue', 'Wed'], ['Thu', 'Fri', 'Sat']]", bindonce)
+                // Navigation
+                .schedule-header
+                    .navbar.navbar-default
+                        .container.row-fluid(bindonce)
+                            .col-sm-4
+                                a.back-btn(ng-click="showGroups()")
+                                    .back-logo-square
+                                        i.the-icon
+                                    span.group-name(bo-html="$routeParams.groupName")
+                                a.type-changer(ng-if="group && group.state == 'exams'", ng-click="") Сессия
+
+                            .col-sm-4.text-center
+                                span.schedule-updated-text
+                                    span(ng-if="last_update", bo-html="'Обновлено ' + '{{ last_update | relativeDate}}'")
+                                    span(ng-if="!last_update") Проверка обновлений...
+                            .col-sm-4.text-right
+                                a.next-week-btn
+                                    span(bo-html="'schedules.index.next_week' | translate")
+                                    i.fa.fa-angle-right
+                // Schedule
                 .lessons-desktop(ng-repeat="line in lines")
                     .container.row-fluid
                         .col-sm-4(ng-repeat="dow in line")
@@ -45,6 +47,9 @@ div(ng-controller='SchedulesStudiesCtrl')
                             div(ng-include, src="'app/partials/schedules/class/index.jade'")
             // One column
             div(ng-if="!matches", ng-init="lines=[['Mon'], ['Tue'], ['Wed'], ['Thu'], ['Fri'], ['Sat']]")
+                // Navigation
+
+                // Schedule
                 .lessons-mobile(ng-repeat="line in lines", bindonce)
                     .row-fluid(ng-repeat="dow in line", bindonce)
                         .lesson-cell.lesson-cell-title
