font-awesome removed

--- a/app/partials/footer.jade
+++ b/app/partials/footer.jade
@@ -3,11 +3,11 @@ footer.footer.ng-cloak(bindonce)
         .row
             .widgets.col-md-3.col-xs-6
                 a(href='#').widget.widget-twitter
-                    i.fa.fa-twitter
+                    i.stico-twitter
                 a(href='#').widget.widget-vk
-                    i.fa.fa-vk
+                    i.stico-vk
                 a(href='#').widget.widget-facebook
-                    i.fa.fa-facebook
+                    i.stico-fb
 
             .navigation.col-md-6.text-center.visible-md.visible-lg
                 ul.list-inline
