--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -1,5 +1,5 @@
 @import _variables
-@import "/bower_components/font-awesome/css/font-awesome.css"
+//@import "/bower_components/font-awesome/css/font-awesome.css"
 
 // Bootstrap Core variables and mixins
 @import "/bower_components/bootstrap-stylus/stylus/variables"
