--- a/app/styles/common/footer.styl
+++ b/app/styles/common/footer.styl
@@ -28,6 +28,7 @@ footer
       line-height $footer-widget-size
       margin-left 15px
       text-align center
+      padding 5px 0 0 0
 
       &:first-child
         margin-left 0
@@ -35,8 +36,6 @@ footer
         background $brand-warning
       &.widget-vk
         background $brand-success
-        .fa
-          padding-right: 1px
       &.widget-facebook
         background $brand-info
 
