--- a/app/styles/schedules/schedules.styl
+++ b/app/styles/schedules/schedules.styl
@@ -30,7 +30,7 @@
         background $brand-info
         padding 0 4px
         color #fff
-        .the-icon
+        .stico-groups-list
           vertical-align middle
           margin-top - (floor($font-size-large - $font-size-medium) - 1)
       .group-name
@@ -66,12 +66,10 @@
       white-space nowrap
       vertical-align bottom
 
-      .fa
-        font-size 35px
-        font-weight 600
-        margin-left 8px
+      .stico-arrow-right
+        margin-left 5px
         vertical-align middle
-        margin-top -4px
+        margin-top -2px
 
 #schedule-greed
   user-select(none)
