--- a/app/styles/common/header.styl
+++ b/app/styles/common/header.styl
@@ -38,6 +38,9 @@ header
             margin 0
             padding 6px 0 0 0
             font-size $font-size-small
+            div
+              margin 0
+              line-height 0
             span
               margin 0
               display inline-block
