--- a/app/partials/schedules/class/info.jade
+++ b/app/partials/schedules/class/info.jade
@@ -1,5 +1,7 @@
-.lesson-info-data(ng-controller="ClassInfoCtrl")
-    span.lesson-name {{clazz.subject.name}}
+.lesson-info-data.col-xs-12(ng-controller="ClassInfoCtrl")
+    .lesson-info-header
+        span.lesson-name {{clazz.subject.name}}
+        span.lesson-place(ng-repeat="place in clazz.place") {{place.name}}
     div(ng-repeat="prof in clazz.professor")
         a.lesson-lecturer {{prof.name}}
-    span.lesson-start-time {{clazz.description}}
+    span.lesson-description {{clazz.description}}
