footer moved down for preventing blinking when content loading

--- a/app/styles/common/layout.styl
+++ b/app/styles/common/layout.styl
@@ -26,7 +26,7 @@ body
 
 // Make some space from footer to content
 #wrap
-  padding-bottom $footer-height + 70
+  padding-bottom $footer-height
 
 
 // Stylish select
