--- a/app/styles/schedules/details.styl
+++ b/app/styles/schedules/details.styl
@@ -79,7 +79,7 @@
 
 
     .attachments
-      margin 10px 0 0 0
+      margin 10px 0 0 1px
       .file-cont
         margin 0 0 10px 0
         .file-header
