--- a/app/partials/schedules/class/attachments.jade
+++ b/app/partials/schedules/class/attachments.jade
@@ -1,9 +1,21 @@
 .lesson-info-files.col-xs-12(ng-controller="ClassAttachmentsCtrl")
     .lesson-info-files-header
         span.att-label Приложения
-        a.add-btn(href="javascript:")
-            i.stico-plus
-            span Добавить
+        .upload-cont
+            a.add-btn(href="", ng-click="showUploadDropdown = !showUploadDropdown")
+                i.stico-plus
+                span Добавить
+            .upload-dropdown(ng-if="showUploadDropdown")
+                ul.att-types(ng-init="type='file'")
+                    li(ng-class="{'current': type == 'file'}", ng-click="type='file'") Файл
+                    li(ng-class="{'current': type == 'link'}", ng-click="type='link'") Ссылка
+                ul.att-sub-types
+                    li Конспект
+                    li Учебник
+                    li Задачник
+                    li Практика
+                    li Билеты
+                    li Другок
 
         label
             select
@@ -12,7 +24,7 @@
     .attachments
         .file-cont
             .file-header
-                a.file-name(href="javascript:") Вопросы-к-экзамену1.pdf
+                a.file-name(href="") Вопросы-к-экзамену1.pdf
                 span.file-size 5Mb
                 span.file-date 21 октября 2013
             .file-descr
@@ -20,7 +32,7 @@
 
         .file-cont
             .file-header
-                a.file-name(href="javascript:") Вопросы-к-экзамену1.pdf
+                a.file-name(href="") Вопросы-к-экзамену1.pdf
                 span.file-size 5Mb
                 span.file-date 21 октября 2013
             .file-descr
@@ -28,7 +40,7 @@
 
         .file-cont
             .file-header
-                a.file-name(href="javascript:") Вопросы-к-экзамену1.pdf
+                a.file-name(href="") Вопросы-к-экзамену1.pdf
                 span.file-size 5Mb
                 span.file-date 21 октября 2013
             .file-descr
