--- a/app/styles/schedules/details.styl
+++ b/app/styles/schedules/details.styl
@@ -2,7 +2,6 @@
 @import "/bower_components/bootstrap-stylus/stylus/mixins"
 
 .lesson-details-container
-  overflow hidden
   background $brand-info-bg
   width 100%
   padding 0
@@ -63,19 +62,62 @@
       .att-label
         font-size $font-size-large
         vertical-align middle
-      .add-btn
+
+      .upload-cont
         display inline-block
-        margin-top 5px
-        padding 0 5px
-        margin-left 10px
-        vertical-align middle
-        &:hover
-          text-decoration none
-        i
+        position relative
+
+        .upload-dropdown
+          position absolute
+          top 35px
+          left 18px
+          z-index 10000
+
+          ul.att-types
+            list-style-type none
+            margin 10px 0 0 15px
+            padding 0
+            li
+              float left
+              padding 3px 10px
+              color $link-color
+              cursor pointer
+              &:hover
+                color $link-hover-color
+              &.current
+                background $brand-info
+                color #fff
+
+          ul.att-sub-types
+            border 2px solid $brand-info-bg
+            margin -10px 0 0 0
+            padding 45px 0 5px 0
+            list-style-type none
+            background #fff
+            border-radius 5px
+            min-width 155px
+            li
+              padding 3px 15px
+              color $link-color
+              cursor pointer
+              &:hover
+                background $link-hover-color
+                color #fff
+
+
+        .add-btn
+          display inline-block
+          margin-top 5px
+          padding 0 5px
+          margin-left 10px
           vertical-align middle
-        span
-          margin-left 5px
-          vertical-align middle
+          &:hover
+            text-decoration none
+          i
+            vertical-align middle
+          span
+            margin-left 5px
+            vertical-align middle
 
 
     .attachments
