--- a/app/partials/schedules/class/attachments.jade
+++ b/app/partials/schedules/class/attachments.jade
@@ -15,7 +15,7 @@
                     li Задачник
                     li Практика
                     li Билеты
-                    li Другок
+                    li Другой
 
         label
             select
