--- a/app/styles/schedules/schedules.styl
+++ b/app/styles/schedules/schedules.styl
@@ -235,15 +235,103 @@
 
   // Mobile schedule
   .lessons-mobile
-  .lesson-cell-mobile
-    border-left: none
-    border-right: none
-
-  .lesson-cell-mobile-bottom
-    border-bottom: 1px solid #f5f8fa
-
-  .lesson-time-mobile
-    margin-left: 0
+    .lesson-cell
+      position relative
+      border-bottom: 1px solid lighten($brand-info, 82%)
+      overflow: hidden
+      height: 64px
+      text-align center
+      font-size $font-size-medium
+      &:active, &:hover, &.active
+        cursor: pointer
+      &.current
+        border: 1px solid $brand-warning
+      // Arrow when details showed?
+      .arrow
+        position absolute
+      // Class name and place
+      .lesson-inside
+        position absolute
+        border-left 1px solid lighten($brand-info, 82%)
+        border-right 1px solid lighten($brand-info, 82%)
+        overflow: hidden
+        padding 0 40px
+        &:hover
+          background lighten($brand-info-bg, 80%)
+        .lesson-name
+          white-space nowrap
+          color #4b5456
+        .lesson-place
+          color #3baba1
+          margin-left 10px
+      .lesson-parity-0
+        line-height 64px
+      .lesson-parity-1
+        line-height 32px
+        font-size $font-size-base
+        border-bottom 1px solid lighten($brand-info, 82%)
+      .lesson-parity-2
+        line-height 32px
+        font-size $font-size-base
+        top 31px
+        border-top 1px solid lighten($brand-info, 82%)
+      .lesson-half-0
+        left - 2px
+        right - 2px
+      .lesson-half-1
+        background #fff
+        width 50%
+        right 50%
+        border-left none
+      .lesson-half-2
+        background #fff
+        width 50%
+        left 50%
+        border-right none
+      // Class number
+      .lesson-time-wrapper
+        float left
+        color $brand-primary
+        padding 15px 0
+        position absolute
+        z-index 1000
+        .lesson-time
+          opacity 0.4
+          &.current
+            color: $brand-warning
+            opacity 1
+          .lesson-time-number, .lesson-time-start
+            margin: 0
+      // Maker hovered row class number more visible
+      &:hover
+        .lesson-time
+          opacity 1
+    //First class top border
+    > :first-child + div.lesson-cell
+      border-top: 1px solid lighten($brand-info, 82%)
+      &.current
+        border-top: 1px solid $brand-warning
+    // Day of week
+    .lesson-cell-title
+      margin 45px 0 30px 0
+      font-size $font-size-large
+      text-align: center
+      .lesson-cell-title-day
+        padding: 5px
+        color: #4b5456
+      .lesson-cell-title-date
+        display: inline-block;
+        margin-right: -55px;
+        font-size $font-size-base
+        color lighten(#brand-primary, 30%)
+      &.current
+        .lesson-cell-title-day
+          border-radius: 5px
+          background: $brand-warning
+          color: #fff
+          padding: 7px 10px;
+        .lesson-cell-title-date
+          color: $brand-primary
 
 .lesson-details-container
   overflow hidden
